<resources>
    <string name="app_name">Garbo Clock</string>
    <string name="action_about">About</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add_holiday">Add holiday</string>
    <string name="action_edit_holiday">Edit holiday</string>
    <string name="action_delete_holiday">Delete holiday</string>
    <string name="action_holidays">Holidays</string>
    <string name="action_settings">Settings</string>
    <string name="action_garbage_settings">Garbage Pick-up</string>
    <string name="action_notification_settings">Notifications</string>
    <string name="label_loading">Loading&#8230;</string>
    <string name="label_garbage_settings">Garbage Pick-up</string>
    <string name="label_garbage_settings_sub">Configure your garbage pick-up schedule</string>
    <string name="label_notifications_settings">Notifications</string>
    <string name="label_notifications_settings_sub">Change how you receive notifications</string>
    <string name="label_day_of_week">Day of week</string>
    <string name="label_garbage_weeks">Garbage is collected</string>
    <string name="label_garbage_week">Next garbage date is</string>
    <string name="label_recycling_weeks">Recycling is collected</string>
    <string name="label_recycling_week">Next recycling date is</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_notify_time">Notify me at</string>
    <string name="notify_option_day_of">Day of pick-up</string>
    <string name="notify_option_day_prior">Day before pick-up</string>
    <string name="label_dates">%s pick-up</string>
    <string name="button_holiday_picker">Configure holidays</string>
    <string name="label_holiday_picker">Select the holidays that affect pick-up.</string>
    <string name="tooltip_holiday_postpones">
        Select if the holiday delays pick-up by 1 day for the rest of the week.
    </string>
    <string name="tooltip_holiday_cancels">
        Select if there is no pick-up on this day, but the rest of the week is unaffected.
    </string>
    <string name="desc_more_info">More info</string>
    <string name="label_holiday">Holiday</string>
    <string name="label_postponed">Postpones</string>
    <string name="label_canceled">Cancels</string>
    <string name="channel_name">Garbage reminders</string>
    <string name="channel_description">Reminders about garbage &amp; recycling pick-up</string>
    <string name="notification_title">Prepare %s</string>
    <string name="notification_body">%1$s pick-up on %2$s</string>
    <string name="notification_item_bulk">bulk</string>
    <string name="notification_item_garbage">garbage</string>
    <string name="notification_item_recycling">recycling</string>
    <string name="never">Never</string>
    <string name="open_source">Garbo Clock is an open-source project.</string>
    <string name="contribute_prompt">Report a bug, add a translation, or contribute at GitHub.</string>
    <string name="help_settings">To configure your schedule, select Settings from the Action Bar, then select Garbage Settings.</string>
    <string name="help_holidays">Long-press the table headers for more information.</string>

    <string name="label_holiday_name">Holiday name</string>
    <string name="label_holiday_type">Type</string>
    <string name="label_holiday_month">Month</string>
    <string name="label_holiday_date">Date</string>
    <string name="label_holiday_day_of_week">Day of week</string>
    <string name="label_holiday_week">Week of month</string>
    <string name="label_holiday_offset">Offset</string>
    <string name="default_holiday_date">1</string>
    <string name="error_holiday_name">Holiday name is required</string>
    <string name="error_holiday_date">Date must be between 1 and 31</string>

    <string-array name="garbage_frequencies">
        <item>Never</item>
        <item>Weekly</item>
        <item>Every other week</item>
        <item>Every third week</item>
    </string-array>

    <!-- this array's order must match HolidayOffset -->
    <string-array name="holiday_offsets">
        <item>Exact day (no offset)</item>
        <item>Next day</item>
        <item>Prior day (eve)</item>
    </string-array>

    <!-- this array's order must match HolidayType -->
    <string-array name="holiday_types">
        <item>Same date every year</item>
        <item>Same day of week every year</item>
    </string-array>

    <string-array name="holiday_week">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Last</item>
    </string-array>
</resources>
