<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HolidayPickerActivity"
    tools:showIn="@layout/activity_holiday_picker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin"
            android:paddingStart="@dimen/main_padding"
            android:paddingEnd="@dimen/main_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/label_holiday_picker"
            tools:text="@string/label_holiday_picker" />

        <TextView
            android:id="@+id/text_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin"
            android:paddingStart="@dimen/main_padding"
            android:paddingEnd="@dimen/main_padding"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorHighlight"
            android:backgroundTint="@color/backgroundHighlight"
            android:text="@string/help_holidays"
            tools:text="@string/help_holidays" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin"
            android:paddingStart="@dimen/main_padding"
            android:paddingEnd="@dimen/main_padding">

            <TextView
                android:id="@+id/text_holiday_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/label_holiday"
                android:textAllCaps="true"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:text="@string/label_holiday" />

            <TextView
                android:id="@+id/text_postpone_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/icon_postpone_header"
                android:text="@string/label_postponed"
                android:textAllCaps="true"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                android:tooltipText="@string/tooltip_holiday_postpones"
                tools:text="@string/label_postponed" />

            <ImageView
                android:id="@+id/icon_postpone_header"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toStartOf="@id/text_cancel_header"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_info"
                android:contentDescription="@string/desc_more_info"
                android:tooltipText="@string/tooltip_holiday_postpones" />

            <TextView
                android:id="@+id/text_cancel_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/icon_cancel_header"
                android:layout_marginStart="@dimen/main_margin"
                android:text="@string/label_canceled"
                android:textAllCaps="true"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                android:tooltipText="@string/tooltip_holiday_cancels"
                tools:text="@string/label_canceled" />

            <ImageView
                android:id="@+id/icon_cancel_header"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="2dp"
                android:src="@drawable/ic_info"
                android:contentDescription="@string/desc_more_info"
                android:tooltipText="@string/tooltip_holiday_postpones" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_holiday_picker"
            android:scrollbars="vertical"
            android:scrollbarStyle="outsideOverlay"
            android:nestedScrollingEnabled="false"
            android:padding="@dimen/main_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
