<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".settings.holidays.HolidayEditorActivity"
    tools:showIn="@layout/activity_holiday_editor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/settings_margin"
                android:labelFor="@id/edit_holiday_name"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/label_holiday_name"
                tools:text="@string/label_holiday_name" />

            <EditText
                android:id="@+id/edit_holiday_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_margin"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:ems="10"
                android:autofillHints="false"
                android:inputType="textCapWords"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/error_holiday_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_margin"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:visibility="gone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorError"
                android:textSize="12sp"
                android:text="@string/error_holiday_name"
                tools:text="@string/error_holiday_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rule_height"
                android:layout_marginTop="@dimen/settings_margin"
                android:layout_marginBottom="@dimen/settings_margin"
                android:background="@color/horizontalRule" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/settings_margin"
                android:labelFor="@id/spinner_holiday_type"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/label_holiday_type"
                tools:text="@string/label_holiday_type" />

            <Spinner
                android:id="@+id/spinner_holiday_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/holiday_types"
                android:popupBackground="@color/backgroundSecondary"
                android:spinnerMode="dropdown" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rule_height"
                android:layout_marginTop="@dimen/settings_margin"
                android:layout_marginBottom="@dimen/settings_margin"
                android:background="@color/horizontalRule" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/settings_margin"
                android:labelFor="@id/spinner_holiday_month"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/label_holiday_month"
                tools:text="@string/label_holiday_month" />

            <Spinner
                android:id="@+id/spinner_holiday_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:popupBackground="@color/backgroundSecondary"
                android:spinnerMode="dropdown" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rule_height"
                android:layout_marginTop="@dimen/settings_margin"
                android:layout_marginBottom="@dimen/settings_margin"
                android:background="@color/horizontalRule" />

            <LinearLayout
                android:id="@+id/layout_holiday_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/settings_margin"
                    android:labelFor="@id/number_holiday_date"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/label_holiday_date"
                    tools:text="@string/label_holiday_date" />

                <EditText
                    android:id="@+id/number_holiday_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/settings_margin"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="16sp"
                    android:ems="10"
                    android:autofillHints="false"
                    android:inputType="number"
                    android:text="@string/default_holiday_date" />

                <TextView
                    android:id="@+id/error_holiday_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/settings_margin"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:visibility="gone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorError"
                    android:textSize="12sp"
                    android:text="@string/error_holiday_date"
                    tools:text="@string/error_holiday_date" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rule_height"
                    android:layout_marginTop="@dimen/settings_margin"
                    android:layout_marginBottom="@dimen/settings_margin"
                    android:background="@color/horizontalRule" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_holiday_day_and_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/settings_margin"
                    android:labelFor="@id/spinner_holiday_day_of_week"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/label_holiday_day_of_week"
                    tools:text="@string/label_holiday_day_of_week" />

                <Spinner
                    android:id="@+id/spinner_holiday_day_of_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="@color/backgroundSecondary"
                    android:spinnerMode="dropdown" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rule_height"
                    android:layout_marginTop="@dimen/settings_margin"
                    android:layout_marginBottom="@dimen/settings_margin"
                    android:background="@color/horizontalRule" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/settings_margin"
                    android:labelFor="@id/spinner_holiday_week"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/label_holiday_week"
                    tools:text="@string/label_holiday_week" />

                <Spinner
                    android:id="@+id/spinner_holiday_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/holiday_week"
                    android:popupBackground="@color/backgroundSecondary"
                    android:spinnerMode="dropdown" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rule_height"
                    android:layout_marginTop="@dimen/settings_margin"
                    android:layout_marginBottom="@dimen/settings_margin"
                    android:background="@color/horizontalRule" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/settings_margin"
                android:labelFor="@id/spinner_holiday_offset"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/label_holiday_offset"
                tools:text="@string/label_holiday_offset" />

            <Spinner
                android:id="@+id/spinner_holiday_offset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/holiday_offsets"
                android:popupBackground="@color/backgroundSecondary"
                android:spinnerMode="dropdown" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/rule_height"
                android:layout_marginTop="@dimen/settings_margin"
                android:layout_marginBottom="@dimen/settings_margin"
                android:background="@color/horizontalRule" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
